syntax = "proto3";

package faceRecognition;

option go_package = "facepb";

option java_package = "com.jjrobot.andy4.facepb";
option java_outer_classname = "FaceServicePB";

service FaceService {
    // Compare方法实现了两张人脸图片对比识别，返回两图片的对比可信度
    rpc Compare(CompareRequest) returns (CompareResponse) {}

    // Search方法实现搜索FaceSet中近似人脸数据，
    // 若存在匹配数据时返回一个FaceDetail及其confidence
    rpc Search(SearchRequest) returns (SearchResponse) {}
}

message CompareRequest {
    bytes face_img1 = 1;
    bytes face_img2 = 2;
}

message CompareResponse {
    // 对比结果信任值 [0, 1.0]
    float confidence = 1;
}

message SearchRequest {
    // FaceSet.id
    string face_set_id = 1;
    // 待搜索人脸图片
    bytes face_img = 2;
}

message SearchResponse {
    // 搜索结果信任值 [0, 1.0]
    float confidence = 1;
    // 搜索结果FaceDetail.token
    string face_token = 2;
}
